production-attribute for router